--- a/anki-user-manager/templates/student_dashboard.html
+++ b/anki-user-manager/templates/student_dashboard.html
@@ -52,6 +52,7 @@
 <div class="card mx-auto mt-4" style="max-width:900px;">
   <div class="card-body">
     <h4>⏱️ Review Time (Last 30 Days)</h4>
+    <p><strong>Average Review Time per Card:</strong> {{ avg_time }} seconds</p>
     <canvas id="timeChart" height="120"></canvas>
   </div>
 </div>
