dashboard student name and eye button in manage user updated

--- a/anki-user-manager/templates/dashboard.html
+++ b/anki-user-manager/templates/dashboard.html
@@ -7,7 +7,7 @@
     <table class="table table-striped table-bordered">
       <thead class="table-dark">
         <tr>
-          <th>Username</th>
+          <th>Student Name</th>
           <th>Total Cards</th>
           <th>Due Cards</th>
           <th>Reviews Today</th>
