eye icon absolute position marked

--- a/anki-user-manager/static/css/style.css
+++ b/anki-user-manager/static/css/style.css
@@ -40,3 +40,16 @@
   text-align: center;
 }
  */
+
+ .toggle-pass {
+    position: relative;
+  }
+
+  .toggle-pass i {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #888;
+  }
