--- a/anki-user-manager/templates/student_dashboard.html
+++ b/anki-user-manager/templates/student_dashboard.html
@@ -81,22 +81,21 @@
   </div>
 </div>
 
+{% if fsrs_stats %}
 <!-- FSRS Metrics -->
 <div class="card mb-4">
   <div class="card-body">
     <h5>FSRS Metrics</h5>
-    {% if fsrs_stats %}
     <ul class="list-group">
       <li class="list-group-item">Avg Difficulty: {{ fsrs_stats.avg_difficulty }}</li>
       <li class="list-group-item">Avg Stability (days): {{ fsrs_stats.avg_stability }}</li>
-      <li class="list-group-item">Avg Retrievability: {{ fsrs_stats.avg_retrievability * 100 }}%</li>
+      <li class="list-group-item">Avg Retrievability: {{ (fsrs_stats.avg_retrievability * 100) | round(2) }}%</li>
       <li class="list-group-item">True Retention: {{ fsrs_stats.true_retention }}%</li>
     </ul>
-    {% else %}
-    <p>No FSRS stats available.</p>
-    {% endif %}
   </div>
 </div>
+{% endif %}
+
 
 <!-- 📊 Chart -->
 <div class="card mx-auto mt-4" style="max-width:900px;">
